<?xml version="1.0" encoding="utf-8"?>
<resources>

    
     <string name="app_name">Domotic Room</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sSettingsActivity">Settings</string>

    <!-- BLUETOOTH FRAGMENT STRINGS -->
    <string name="Text">Status: -</string>
    <string name="on">Turn On</string>
    <string name="off">Turn Off</string>
    <string name="List">List paired Devices</string>
    <string name="Find">Search new Devices / Cancel</string>
    <string name="sUnderConstruction">Under Construction</string>
    <string name="sCustomize">Customize</string>
    <string name="sBluetoothSettings">Bluetooth Settings</string>
    <string name="sSettings">Settings</string>
    <string name="sBluetooth">Bluetooth</string>

    <!-- ROOM COMPONENTS STRINGS -->
    <string name="sDoor">Door</string>
    <string name="sDoorImDescription">Toggle OPEN/CLOSED Door</string>
    <string name="sDoorOpen">OPEN</string>
    <string name="sDoorClose">CLOSE</string>
    <string name="sDoorLock">LOCK</string>
    <string name="sLcd">LCD</string>
    <string name="sLcdSend">SEND</string>
    <string name="sLight">Light</string>
    <string name="sLightImDescription">Toggle ON/OFF Light</string>
    <string name="sLightAuto">AUTO</string>
    <string name="sLightOn">ON</string>
    <string name="sLightOff">OFF</string>
    <string name="sMotor">Motor</string>
    <string name="sMotorImDescription">Toggle ON/OFF Motor</string>
    <string name="sMotorForward">FORWARD</string>
    <string name="sMotorBackward">BACK</string>
    <string name="sServo">Servo</string>
    <string name="sServoImDescription">Toggle ON/OFF Servo</string>
    <string name="sSwitch">Switch</string>
    <string name="sSwitchImDescription">Toggle ON/OFF Switch</string>
    <string name="sTemperature">Temperature</string>
    <string name="sTemperatureImDescription">Toogle ON/OFF Temp. Control</string>
    <string name="sTemperatureAuto">AUTO</string>
    <string name="sTemperatureOn">ON</string>
    <string name="sTemperatureOff">OFF</string>
    <string name="sTemperatureSetPoint">SetPoint</string>
    <string name="sTemperatureCurrent">24°C</string>
    <string name="sWindow">Window</string>
    <string name="sWindowHeight">Height</string>
    <string name="sWindowOpening">Opening</string>
    <string name="sWindowImDescriptionHeight">Toggle LOW/HIGH Window Height</string>
    <string name="sWindowImDescriptionOpening">Toggle OPEN/CLOSED Window</string>

    <!-- ANOTHER STRINGS -->
    <string name="sUserName">User Name</string>
    <string name="sPassword">Password</string>
    <string name="sNew">New</string>
    <string name="sDelete">Delete</string>
    <string name="sEdit">Edit</string>
    <string name="tab_1">Tab 1</string>
    <string name="tab_2">Tab 2</string>
    <string name="sEmpty">Empty</string>
    <string name="sIDescritpion_NewRoom">New Room</string>
    <string name="sComponent">Component</string>
    <string name="sComponentDescription">Component description</string>
    <string name="sComponentImage">Image of Component</string>
    <string name="SIDComponent">ID</string>
    <string name="sPassToRoom">Move to room</string>
  
    <string name="sOn">ON</string>
    <string name="sOff">OFF</string>
    <string name="sKey0">0</string>
    <string name="sKey1">1</string>
    <string name="sKey2">2</string>
    <string name="sKey3">3</string>
    <string name="sKey4">4</string>
    <string name="sKey5">5</string>
    <string name="sKey6">6</string>
    <string name="sKey7">7</string>
    <string name="sKey8">8</string>
    <string name="sKey9">9</string>
    <string name="sKeyA">A</string>
    <string name="sKeyB">B</string>
    <string name="sKeyC">C</string>
    <string name="sKeyD">D</string>
    <string name="sKeyAst">*</string>
    <string name="sKeyNum">#</string>
    <string name="sfromBT">SMS from Bluetooth</string>
    <string name="sSend">Send</string>
    <string name="sConnect">Connect</string>

</resources>